--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <link rel="icon" href="x" type="image/x-icon">
     <link rel="stylesheet" href="css/css.css">
     <!-------------------------------구글 아이콘, 제이쿼리, 부트스트랩 cdn------------------------------->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+    <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
           rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
@@ -75,68 +79,100 @@
         </a>
     </div>
     <!--------------------------------상단 네비-------------------------------------->
+    <!--------------------------------데스크탑네비-------------------------------------->
     <header>
         <nav id="topGnb">
             <a href="index.html">
-                <img src="img/logo2.png" width="166px" height="28px" alt="" id="noneHov">
-                <img src="img/logo_color.png" width="166px" height="28px" alt="" id="actHov">
+                <img src="img/logo_color.png" width="166px" height="28px" alt="">
             </a>
             <ul>
                 <li><a href="#">회사소개</a></li>
                 <li><a href="#">사업영역</a></li>
-                <li><a href="index3.html">특장점</a></li>
-                <li><a href="#">포트폴리오</a></li>
+                <li><a href="method.html">특장점</a></li>
+                <li><a href="work_list.html">포트폴리오</a></li>
                 <li><a href="#">오시는 길</a></li>
                 <li><a href="#">프로젝트 의뢰</a></li>
             </ul>
             <span class="material-symbols-outlined" id="language">language</span>
-            <span class="material-symbols-outlined" id="menu">menu</span>
-            <nav id="subMenu">
-                <ul class="subList">
-                    <li>
-                        <a href="index2.html">
-                            회사소개
-                        </a>
-                    </li>
-                    <li>
-                        <a href="">
-                            주요 서비스
-                        </a>
-                    </li>
-                </ul>
-            </nav>
+            <span class="material-symbols-outlined" id="hamburger">menu</span>
         </nav>
         <!--------------------------------데스크탑서브메뉴-------------------------------------->
+        <nav id="subMenu">
+            <ul class="subList">
+                <li>
+                    <a href="company.html">
+                        회사소개
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        주요 서비스
+                    </a>
+                </li>
+            </ul>
+        </nav>
         <nav id="subMenu2">
-            <ul>
-                <p>시스템통합</p>
-                <li>-민간·서비스</li>
-                <li>-금융</li>
-                <li>-공공</li>
-                <li>-커머스</li>
-                <li>-헬스케어</li>
-                <li>-국방</li>
-            </ul>
-            <p>운영서비스</p>
-            <ul>
+            <div id="subMenu2_firstBox">
+                <div id="subMenu2_textBox">
+                    <p>시스템통합</p>
+                </div>
+                <div class="subMenu2_menu">
+                    <ul class="px-0">
+                        <li>
+                            <a href="">-민간·서비스</a>
+                        </li>
+                        <li>
+                            <a href="">-공공</a>
+                        </li>
+                        <li>
+                            <a href="">-헬스케어</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="subMenu2_menu">
+                    <ul>
+                        <li>
+                            <a href="">-금융</a>
+                        </li>
+                        <li>
+                            <a href="">-커머스</a>
+                        </li>
+                        <li>
+                            <a href="">-국방</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div>
+                <p>운영서비스</p>
+            </div>
+            <div>
                 <p>플랫폼</p>
-                <li>-플러스넷</li>
-                <li>-PG·VAN 서비스</li>
-                <li>-창업서비스</li>
-            </ul>
+                <ul class="px-0">
+                    <li>
+                        <a href="">-플러스넷</a>
+                    </li>
+                    <li>
+                        <a href="" id="subMenu2_lastTxt">-PG·VAN 서비스</a>
+                    </li>
+                    <li>
+                        <a href="">-창업서비스</a>
+                    </li>
+                </ul>
+            </div>
         </nav>
     </header>
     <!--------------------------------모바일 메뉴-------------------------------------->
     <nav class="mobileGnb">
         <div id="mobileTop">
-            <a href="index.html">
+            <a href="#">
                 <img src="img/logo_color.png" alt="">
             </a>
             <span class="material-symbols-outlined close">close</span>
         </div>
         <ul class="mobileMenu">
             <li>
-                <a href="">회사소개</a>
+                <a href="#">회사소개</a>
                 <span class="material-symbols-outlined moreBtn1">expand_more</span>
                 <span class="material-symbols-outlined lessBtn1">expand_less</span>
             </li>
@@ -169,7 +205,7 @@
                     </li>
                 </ul>
             </div>
-            <li><a href="index3.html">특장점</a></li>
+            <li><a href="#">특장점</a></li>
             <li><a href="#">포트폴리오</a></li>
             <li><a href="#">오시는 길</a></li>
             <li><a href="#">프로젝트 의뢰</a></li>
@@ -437,16 +473,19 @@
         subMenu.hide();
         subMenu2.hide();
         navLi.eq(0).hover(function (){
-            // subList1.show();
+            header.css("height","200px")
             subMenu.show();
             subMenu2.hide();
         });subMenu.mouseleave(function (){
             subMenu.hide();
+            header.css("height","100px")
         });
         navLi.eq(1).hover(function (){
+            header.css("height","260px")
             subMenu2.show();
             subMenu.hide();
         });subMenu2.mouseleave(function (){
+            header.css("height","100px")
             subMenu2.hide();
         });
 
@@ -484,6 +523,7 @@
             closeBtn.hide();
             menuBtn.show();
             topGnb.show();
+            // topGnb.css("display","none");
         })
         /********************모바일 서브 메뉴1********************/
         lessBtn1.hide();
