--- a/method.html
+++ b/method.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>방법론 > 컨트롤에이, CONTROLA : 즐거운 상상력</title>
     <link rel="icon" href="x" type="image/x-icon">
-    <link rel="stylesheet" href="css/css3.css">
+    <link rel="stylesheet" href="css/method.css">
     <link rel="stylesheet"
           href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap" rel="stylesheet">
@@ -35,7 +35,7 @@
         <nav id="subMenu">
             <ul class="subList">
                 <li>
-                    <a href="">
+                    <a href="company.html">
                         회사소개
                     </a>
                 </li>
@@ -118,7 +118,7 @@
             <div id="subM1">
                 <ul>
                     <li>
-                        <a href="index2.html">회사소개</a>
+                        <a href="company.html">회사소개</a>
                     </li>
                     <li>
                         <a href="">주요 서비스</a>
@@ -144,8 +144,8 @@
                     </li>
                 </ul>
             </div>
-            <li><a href="index3.html">특장점</a></li>
-            <li><a href="#">포트폴리오</a></li>
+            <li><a href="method.html">특장점</a></li>
+            <li><a href="work_list.html">포트폴리오</a></li>
             <li><a href="#">오시는 길</a></li>
             <li><a href="#">프로젝트 의뢰</a></li>
         </ul>
