--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>컨트롤에이, CONTROLA : 즐거운 상상력</title>
     <link rel="icon" href="x" type="image/x-icon">
-    <link rel="stylesheet" href="css/css.css">
+    <link rel="stylesheet" href="css/index.css">
     <!-------------------------------구글 아이콘, 제이쿼리, 부트스트랩 cdn------------------------------->
     <link rel="stylesheet"
           href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
@@ -179,7 +179,7 @@
             <div id="subM1">
                 <ul>
                     <li>
-                        <a href="index2.html">회사소개</a>
+                        <a href="company.html">회사소개</a>
                     </li>
                     <li>
                         <a href="">주요 서비스</a>
@@ -205,8 +205,8 @@
                     </li>
                 </ul>
             </div>
-            <li><a href="#">특장점</a></li>
-            <li><a href="#">포트폴리오</a></li>
+            <li><a href="method.html">특장점</a></li>
+            <li><a href="work_list.html">포트폴리오</a></li>
             <li><a href="#">오시는 길</a></li>
             <li><a href="#">프로젝트 의뢰</a></li>
         </ul>
