--- a/work_list.html
+++ b/work_list.html
@@ -156,7 +156,7 @@
     <div id="section1_nav">
         <nav>
             <ul>
-                <li>ALL</li>
+                <li class="active">ALL</li>
                 <li>Consulting</li>
                 <li>Corporation</li>
                 <li>e-Commerce</li>
@@ -174,8 +174,8 @@
     </div>
     <!--------------------------------section1 (▼ 구조 변경 중 ▼)-------------------------------------->
     <section id="section1">
-        <div id="section1_firstLine" class="sec1-mb-40">
-            <div class="bor po box">
+        <div id="section1_firstLine" class="sec1-mb-90">
+            <div class="po box">
                 <!--hover-->
                 <div class="section1_imgHoverBox">
                     <div class="section1_imgHoverTxt">
@@ -191,21 +191,41 @@
                     <img src="work_/file_1652876889_.png" alt="">
                 </div>
                 <div class="section1_txtBox">
-                    <h3>LG에너지 솔루션 ESS WECARE</h3>
+                    <h3>LG에너지 솔루션 ESS WECARE 캠페인 개발</h3>
                     <p>LG에너지솔루션  2022.04.15</p>
                 </div>
             </div>
-            <div class="po">
+            <div class="po box">
+                <!--hover-->
+                <div class="section1_imgHoverBox">
+                    <div class="section1_imgHoverTxt">
+                        <h2>밥# 전기차 플랫폼 어플리케이션 개발</h2>
+                        <span class="arrow">
+                            <img src="img/ico_link.png" alt="">
+                        </span>
+                        <p>밥# 전기차 플랫폼 어플리케이션 개발</p>
+                    </div>
+                </div>
                 <div class="section1_imgBox">
                     <span class="Classification">eBusiness</span>
                     <img src="work_/file_1651841183_.png" alt="">
                 </div>
                 <div class="section1_txtBox">
-                    <h3>밥# 전기차 플랫폼 어플리케이션</h3>
+                    <h3>밥# 전기차 플랫폼 어플리케이션 개발</h3>
                     <p>(주)피엠그로우 2021.11.03</p>
                 </div>
             </div>
-            <div class="po">
+            <div class="po box">
+                <!--hover-->
+                <div class="section1_imgHoverBox">
+                    <div class="section1_imgHoverTxt">
+                        <h2>잇다이아 게임중개플랫폼 유지보수</h2>
+                        <span class="arrow">
+                            <img src="img/ico_link.png" alt="">
+                        </span>
+                        <p>잇다이아 게임중개플랫폼 PC/모바일 통합 유지보수</p>
+                    </div>
+                </div>
                 <div class="section1_imgBox">
                     <span class="Classification">eBusiness</span>
                     <img src="work_/file_1652875264_.png" alt="">
@@ -215,29 +235,59 @@
                     <p>주식회사 리을 2021.10.01</p>
                 </div>
             </div>
-            <div class="po">
+            <div class="po box">
+                <!--hover-->
+                <div class="section1_imgHoverBox">
+                    <div class="section1_imgHoverTxt">
+                        <h2>커스텀아츠 기업사이트 반응형웹 개발</h2>
+                        <span class="arrow">
+                            <img src="img/ico_link.png" alt="">
+                        </span>
+                        <p>반응형 웹 개발</p>
+                    </div>
+                </div>
                 <div class="section1_imgBox">
                     <span class="Classification">Coporaiton</span>
                     <img src="work_/file_1651840540_.png" alt="">
                 </div>
                 <div class="section1_txtBox">
-                    <h3>커스텀아츠 기업사이트 반응형웹</h3>
+                    <h3>커스텀아츠 기업사이트 반응형웹 개발</h3>
                     <p>커스텀아츠 주식회사 2021.09.10</p>
                 </div>
             </div>
         </div>
-        <div id="section1_secondLine" class="sec1-mb-40">
-            <div class="po">
+        <div id="section1_secondLine" class="sec1-mb-90">
+            <div class="po box">
+                <!--hover-->
+                <div class="section1_imgHoverBox">
+                    <div class="section1_imgHoverTxt">
+                        <h2>팀하트흉부외과의원 홍보 및 예약 시스템 개발</h2>
+                        <span class="arrow">
+                            <img src="img/ico_link.png" alt="">
+                        </span>
+                        <p>팀하트흉부외과의원 홍보 및 예약 시스템 개발</p>
+                    </div>
+                </div>
                 <div class="section1_imgBox">
                     <span class="Classification">eBusiness</span>
                     <img src="work_/file_1652876850_.png" alt="">
                 </div>
                 <div class="section1_txtBox">
-                    <h3>팀하트흉부외과의원 홍보 및 예</h3>
+                    <h3>팀하트흉부외과의원 홍보 및 예약 시스템 개발</h3>
                     <p>팀하트흉부외과의원 2021.07.20</p>
                 </div>
             </div>
-            <div class="po">
+            <div class="po box">
+                <!--hover-->
+                <div class="section1_imgHoverBox">
+                    <div class="section1_imgHoverTxt">
+                        <h2>케어런츠 서비스 플랫폼 개발</h2>
+                        <span class="arrow">
+                            <img src="img/ico_link.png" alt="">
+                        </span>
+                        <p>케어런츠 서비스 플랫폼 개발</p>
+                    </div>
+                </div>
                 <div class="section1_imgBox">
                     <span class="Classification">eBusiness</span>
                     <img src="work_/file_1652876813_.png" alt="">
@@ -247,7 +297,17 @@
                     <p>케어런츠 주식회사 2021.05.27</p>
                 </div>
             </div>
-            <div class="po">
+            <div class="po box">
+                <!--hover-->
+                <div class="section1_imgHoverBox">
+                    <div class="section1_imgHoverTxt">
+                        <h2>캐치아이 기업사이트 반응형 개발</h2>
+                        <span class="arrow">
+                            <img src="img/ico_link.png" alt="">
+                        </span>
+                        <p>캐치아이 기업사이트 반응형 개발</p>
+                    </div>
+                </div>
                 <div class="section1_imgBox">
                     <span class="Classification">Coporaiton</span>
                     <img src="work_/file_1651838704_.png" alt="">
@@ -257,19 +317,39 @@
                     <p>캐치아이 주식회사 2021.05.25</p>
                 </div>
             </div>
-            <div class="po">
+            <div class="po box">
+                <!--hover-->
+                <div class="section1_imgHoverBox">
+                    <div class="section1_imgHoverTxt">
+                        <h2>잇다이아 게임중개플랫폼 PC 웹 개발</h2>
+                        <span class="arrow">
+                            <img src="img/ico_link.png" alt="">
+                        </span>
+                        <p>잇다이아 게임중개플랫폼 PC웹 개발 및 PC/모바일 최적화</p>
+                    </div>
+                </div>
                 <div class="section1_imgBox">
                     <span class="Classification">eBusiness</span>
                     <img src="work_/file_1652874929_.png" alt="">
                 </div>
                 <div class="section1_txtBox">
-                    <h3>잇다이아 개임중개 플랫폼 PC웹</h3>
+                    <h3>잇다이아 개임중개 플랫폼 PC웹 개발</h3>
                     <p>주식회사 리을 2021.05.10</p>
                 </div>
             </div>
         </div>
-        <div id="section1_thirdLine" class="sec1-mb-40">
-            <div class="po">
+        <div id="section1_thirdLine" class="sec1-mb-90">
+            <div class="po box">
+                <!--hover-->
+                <div class="section1_imgHoverBox">
+                    <div class="section1_imgHoverTxt">
+                        <h2>캐치아이 CI 및 패키지 개발</h2>
+                        <span class="arrow">
+                            <img src="img/ico_link.png" alt="">
+                        </span>
+                        <p>캐치아이 CI(로고) 및 패키지 개발</p>
+                    </div>
+                </div>
                 <div class="section1_imgBox">
                     <span class="Classification">Coporaiton</span>
                     <img src="work_/file_1651836834_.png" alt="">
@@ -279,13 +359,23 @@
                     <p>캐치아이 주식회사 2021.03.10</p>
                 </div>
             </div>
-            <div class="po">
+            <div class="po box">
+                <!--hover-->
+                <div class="section1_imgHoverBox">
+                    <div class="section1_imgHoverTxt">
+                        <h2>넛츠크루 기업 및 다국어 서비스 제작</h2>
+                        <span class="arrow">
+                            <img src="img/ico_link.png" alt="">
+                        </span>
+                        <p>넛츠크루 기업 및 다국어 서비스 제작</p>
+                    </div>
+                </div>
                 <div class="section1_imgBox">
                     <span class="Classification">Coporaiton</span>
                     <img src="work_/file_1615725085_.png" alt="">
                 </div>
                 <div class="section1_txtBox">
-                    <h3>넛츠크루 기업 및 다국어 서비스</h3>
+                    <h3>넛츠크루 기업 및 다국어 서비스 제작</h3>
                     <p>넛츠크루 2021.03</p>
                 </div>
             </div>
@@ -310,21 +400,11 @@
 </div>
 <script>
     $(function (){
-        let mbMenu=$(".mobileGnb")
-        let closeBtn=$(".close")
-        let hamburgerBtn=$("#hamburger");
-        let topGnb=$("#topGnb");
-        let moreBtn1=$(".moreBtn1");
-        let lessBtn1=$(".lessBtn1");
-        let moreBtn2=$(".moreBtn2");
-        let lessBtn2=$(".lessBtn2");
-        let subM1=$("#subM1");
-        let subM2=$("#subM2");
+        /********************topGnb 활성화 및 비활성화********************/
         let header=$("header");
+        let navLi=$("#topGnb li a");
         let subMenu=$("#subMenu");
         let subMenu2=$("#subMenu2");
-        let navLi=$("#topGnb li a");
-        /********************topGnb 활성화 및 비활성화********************/
 
         subMenu.hide();
         subMenu2.hide();
@@ -333,6 +413,10 @@
             subMenu.hide();
             subMenu2.hide();
         })
+        /*navLi.hover(function (){
+            $(this).addClass("gnbActive");
+            navLi.not(this).removeClass("gnbActive");
+        })*/
         navLi.eq(0).hover(function (){
             // subList1.show();
             subMenu.show();
@@ -364,6 +448,11 @@
             subMenu.hide();
         })
         /********************모바일 메뉴 활성화 및 비활성화********************/
+        let topGnb=$("#topGnb");
+        let mbMenu=$(".mobileGnb")
+        let closeBtn=$(".close")
+        let hamburgerBtn=$("#hamburger");
+
         mbMenu.hide();
         closeBtn.hide();
 
@@ -376,7 +465,6 @@
             header.hide();
         })
         closeBtn.click(function (){
-            topGnb.css("background-color","")
             $("body").removeClass("hidden");
             mbMenu.hide();
             closeBtn.hide();
@@ -385,6 +473,13 @@
             header.show();
         })
         /********************모바일 서브 메뉴1********************/
+        let moreBtn1=$(".moreBtn1");
+        let lessBtn1=$(".lessBtn1");
+        let moreBtn2=$(".moreBtn2");
+        let lessBtn2=$(".lessBtn2");
+        let subM1=$("#subM1");
+        let subM2=$("#subM2");
+
         lessBtn1.hide();
         subM1.hide();
         moreBtn1.on("click",function (){
@@ -411,6 +506,13 @@
             subM2.hide();
             moreBtn2.show();
             lessBtn2.hide();
+        })
+        /********************active 활성화 및 비활성화********************/
+        let activeClass=$("#section1_nav nav ul li");
+
+        activeClass.click(function (){
+            $(this).addClass("active");
+            activeClass.not(this).removeClass("active")
         })
     })
 </script>
